[gd_scene load_steps=4 format=3 uid="uid://ciuuyw6fmm2vm"]

[ext_resource type="Script" path="res://scenes/components/poke_preview/PokeviewSmall.gd" id="1_2pfu5"]
[ext_resource type="Theme" uid="uid://dmb3bcss87ahv" path="res://assets/themes/pokeview_small.tres" id="1_vk31s"]
[ext_resource type="Texture2D" uid="uid://bhwj25j0dqhxm" path="res://assets/images/icons/pokeball_line_small_disabled.svg" id="2_v6s05"]

[node name="PokeviewSmall" type="Button"]
custom_minimum_size = Vector2(200, 200)
offset_right = 200.0
offset_bottom = 200.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
theme = ExtResource("1_vk31s")
script = ExtResource("1_2pfu5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 200.0
offset_bottom = 200.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BG" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer"]
modulate = Color(1, 1, 1, 0.478431)
layout_mode = 2
texture = ExtResource("2_v6s05")
stretch_mode = 5

[node name="TexturePokemon" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 3
stretch_mode = 5

[node name="LabelName" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
horizontal_alignment = 1
clip_text = true

[node name="HTTPRequestPoke" type="HTTPRequest" parent="."]

[node name="HTTPRequestSpecies" type="HTTPRequest" parent="."]

[node name="HTTPRequestImage" type="HTTPRequest" parent="."]

[node name="_Debug" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="LblSpecies" type="Label" parent="_Debug"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="LblBaseform" type="Label" parent="_Debug"]
layout_mode = 0
offset_top = 26.0
offset_right = 40.0
offset_bottom = 52.0
